# gemini-web-wrapper

./: .editorconfig  .env.example  .gitignore  .mergify.yml  .pre-commit-config.yaml  .vercelignore  AGENTS.md  AGENT_RULES.md  AI_RULES.md  CHAT_WIDGET_SUMMARY.md  CLAUDE.md  DEPENDENCY_AUDIT.md  DEPENDENCY_AUDIT_2026-01-25.md  DEPENDENCY_AUDIT_2026-01-26.md  DEPENDENCY_AUDIT_2026.md  DEPENDENCY_AUDIT_REPORT.md  DEPLOYMENT.md  GEMINI.md  GENKIT_MIGRATION_PLAN.md  IMMEDIATE_ACTIONS.md  INTEGRATION_PLAN.md  OPENROUTER_REDESIGN.md  OPEN_WEBUI_INTEGRATION.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_AUDIT.md  PERFORMANCE_FIXES_SUMMARY.md  PLAN.md  README.md  REFACTORING_SUMMARY.md  TODO. md  TODO.md  _legacy_api.py  biome.json  build.sh  chainlit_app.py  codesum-shell.sh  codesum.py  commit_msg.txt  composio_service.py  config.py  (+57 more)
.chainlit/: README.md  config.toml
.claude/commands/: clean.md
.github/: copilot-instructions.md  dependabot.yml  renovate.json
.github/agents/: bash.agent.md  python.agent.md
.github/instructions/: actions.instructions.md  bash.instructions.md  code-review-generic.instructions.md  javascript.instructions.md  memory-bank.instructions.md  performance-optimization.instructions.md  python.instructions.md  quality-standards.instructions.md  task-implementation.instructions.md  token-efficient.instructions.md
.github/prompts/: bash.prompt.md  python.prompt.md
.github/skills/language-optimization/: SKILL.md
.github/skills/mcp-development/: SKILL.md
.github/skills/nodejs-best-practices/: SKILL.md
.github/skills/typescript-sdk/: metadata.json
.github/workflows/: autofix.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  dependabot-automerge.yml  eslint.yml  frogbot-scan-and-fix.yml  jekyll-gh-pages.yml  lint.yml  pylint.yml  python-app.yml  python-publish.yml  release.yml  run-agent.yml  test.yml
.kilo/: kilo.json
.kilo/plans/: 1776298436897-.md
.mise/tasks/: install
.opencode/: AGENTS.md  opencode.json  package.json  tsconfig.json
.opencode/plugins/: cachebro.ts  codemogger.ts  gitingest.ts  memelord.ts  openslimedit.ts  tools.ts  trim-tool-name.js
.opencode/tools/: ast_grep.ts  fastedit.ts  hashline_edit.ts  hashline_rg.ts  hashline_utils.ts  interactive_bash.ts  json_repair.ts
.openhands/microagents/: openhands-setup.md  repo.md
.serena/: project.yml
apps/api/: package.json  pyproject.toml  pyrefly.toml  tsconfig.json
apps/api/src/: index.ts
apps/api/src/affine/api/: __main__.py  composio_service.py  config.py  dependencies.py  gemini_client.py  github_service.py  lifespan.py  local_index.py  local_index_cli.py  message_transforms.py  models.py  openai_schemas.py  openai_transforms.py  repo_index.py  repo_indexing.py  response_builder.py  server.py  state.py  tool_parsing.py  utils.py
apps/api/src/affine/api/endpoints/: chat.py  gemini.py  github.py  openai.py  openwebui.py  profiles.py  sessions.py  tools.py
apps/api/src/affine/api/llm_core/: factory.py  interfaces.py
apps/api/src/affine/api/llm_core/providers/: anthropic.py  bifrost.py  copilot.py  gemini.py
apps/api/src/affine_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/llm-core/: index.ts  interfaces.ts
apps/api/src/llm-core/providers/: bifrost.ts  copilot.ts  gemini.ts
apps/api/src/models/: index.ts  openai-schemas.ts
apps/api/src/services/: cookie-manager.ts  github.ts  index.ts  session-manager.ts
apps/api/tests/: conftest.py  test_local_index.py  test_repo_index.py  test_server.py  test_server_helpers.py
apps/web/: .gitignore  README.md  biome.json  eslint.config.mjs  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/.netlify/: netlify.toml
chat-github/: index.html
docs/: architecture.md  deployment.md  migration-matrix.md  runtime-modes.md
docs/examples/: websocket-server.js
endpoints/: chat.py  gemini.py  github.py  openai.py  openwebui.py  profiles.py  sessions.py  tools.py
frontend/: .eslintrc.cjs  DESIGN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  offline.html
frontend/src/: App.css  App.tsx  index.css  main.tsx  store.ts
llm_core/: factory.py  interfaces.py
llm_core/providers/: anthropic.py  bifrost.py  copilot.py  gemini.py
public/: manifest.json  sw.js
web/: README.md  app.js  index.html  style.css
web-orig/: app.js  index.html  style.css
(+76 files in other folders)
